Diverses corrections y compris z-index footer

--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -20,13 +20,14 @@ body {
 }
 
 footer {
+    z-index: 1000;
     background-color: white;
     position: fixed;
     text-align: right;
     width: 100%;
     height: 25px;
     bottom: 0px;
-    right: 10px;
+    right: 10px; 
 }
 
 .mini {
